# experiment-launcher

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: publish.yaml  test.yaml
examples/basic/: launch_test.py  test.py
examples/config_files/: launch_test.py  test.py
examples/multi_exp_same_gpu/: launch_test.py  test.py
examples/start_seed/: launch_test.py  test.py
examples/sweep/: launch_test.py  test.py
experiment_launcher/: launcher.py
experiment_launcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: decorators.py  launcher.py
src/experiment_launcher/: __init__.py  config.py  decorators.py  launcher.py  utils.py
tests/: conftest.py  test_config.py  test_decorators.py  test_launcher.py  test_utils.py  test_wandb_integration.py
