[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-launcher-meco"
version = "4.0.0"
authors = [
  { name="Edward Sandra", email="edward.sandra@kuleuven.be" }
]
description = "Launch experiments locally or on SLURM clusters with ease. Fork from 'experiment-launcher'."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "joblib",
    "gitpython",
    "pyyaml",
]

[project.optional-dependencies]
wandb = ["wandb"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]
all = ["experiment-launcher-meco[wandb,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/experiment_launcher"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
